--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,4 +1,4 @@
-.columns > div {
+/* .columns > div {
   display: flex;
   flex-direction: column;
 }
@@ -30,4 +30,4 @@
     flex: 1;
     order: unset;
   }
-}
+} */
